# futureEXPERT

./: .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  generate-notebook-list.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run-e2e.sh  setup.py  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  package.yml  website.yml
.gitlab/merge_request_templates/: Default.md
docs/: make.py
example-data/: bicycle_data.csv  working_days_bavaria.csv
example_data/: OITM.csv  ORDR.csv  bicycle_data_single.csv  config_bicycle_data.json  consumer_index.csv  consumer_sales.csv  data_source.txt  example_customer_data.csv  example_data.csv  monthly_business_inds.csv  open_orders_demand.csv  temperatur.csv  ts_bicycle_roentgenring_20260131.csv  working_days_bavaria.csv
futureexpert/: __init__.py  _auth.py  _forecast_consistency_metadata.py  _future_api.py  _helpers.py  associator.py  base_models.py  batch_forecast.py  checkin.py  expert_client.py  forecast.py  forecast_consistency.py  future_api.py  make_forecast_consistent.py  matcher.py  plot.py  pool.py  result_models.py  shaper.py  shared_models.py
notebooks/: advanced_workflow.ipynb  ai_assisted_data_transformation_for_checkin.ipynb  associator.ipynb  checkin_configuration_options.ipynb  checkin_preparation_with_AI_prompt.ipynb  cov_matcher_and_forecast.ipynb  cov_matcher_and_forecast_monthly.ipynb  forecast_with_covariates.ipynb  forecast_with_open_orders.ipynb  getting_started.ipynb  make_forecasts_consistent.ipynb  make_forecasts_consistent_with_package_sizes.ipynb  shaper.ipynb  simple_workflow.ipynb  using_covariates_from_POOL.ipynb  using_covariates_from_futurepool.ipynb  working_with_results.ipynb
notebooks/prompt_templates/: PromptTemplate.docx  PromptTemplate.txt
tests/: conftest.py  test_batch_forecast.py  test_checkin.py  test_checkin_pool.py  test_convert_ranking.py  test_forecast.py  test_matcher.py  test_plot.py
tests/notebook_execution/: expected_demand_planning_overview.csv  expected_sales_forecasting_overview.csv  test_notebook_results.py  test_use_case_results.py  utility.py
tests/unit_tests/: test_checkin.py  test_checkin_pool.py  test_convert_ranking.py  test_expert_client.py  test_features.py  test_forecast.py  test_forecast_consistency.py  test_make_forecast_consistent.py  test_matcher.py  test_plot.py  test_reconciliation_config.py  test_shaper.py  test_shared_models.py
tests/unit_tests/test_data/: demo_demand_planning_data.csv
use_cases/demand_planning/: demand_planning.ipynb  demand_planning_NOW+EXPERT.ipynb
use_cases/sales_forecasting/: demo_sales_data.csv  sales_covariates.csv  sales_forecasting.ipynb
