[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "futureexpert"
# The version is read dynamically from your __about__.py file.
dynamic = ["version"]
description = "Forecasting has never been easier."
# This assumes you have a README.md file in your project root.
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["time-series", "forecast", "ml"]
authors = [
  { name = "prognostica GmbH", email = "support@future-forecasting.de" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    # I took the liberty of combining 'Data scientists' with 'Science/Research'.
    # I also combined 'Data-based forecasting' into the general 'Scientific/Engineering' topic.
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Typing :: Typed",
]

# Core project dependencies
dependencies = [
    "python-keycloak==3.12.0",
    "tenacity>=8.2.0",
    "httpx>=0.27.2",
    "matplotlib>=3.8.0",
    "plotly>=5.24.1",
    "pydantic>=2.5.0,<3.0.0",
    "numpy>=1.22.4,<2.0.0",
    "pandas>=1.4.3",
    "python-dotenv",
]

[project.urls]
homepage = "https://www.future-forecasting.de"
source = "https://github.com/discovertomorrow/futureexpert"
tracker = "https://github.com/discovertomorrow/futureexpert/issues"
"release notes" = "https://github.com/discovertomorrow/futureEXPERT/releases"

# Optional dependencies (for 'pip install .[dev]')
[project.optional-dependencies]
dev = [
    "pytest",
    "ipytest",
    "isort",
    "mypy==1.0.*",
    "autopep8",
    "cloudpickle",
    "pdoc3",
    "types-pkg-resources==0.1.3",
    "types-python-dateutil",
    "types-toml",
    "jupyter==1.0.0",
    "nbconvert==7.2.6",
    "nbqa==1.5.3",
    "python-dotenv",
    "lxml"  # needed for using pd.read_html
]

[tool.setuptools]
# This tells setuptools where to find the __version__
dynamic = {version = {attr = "futureexpert.__about__.__version__"}}

[tool.setuptools.packages.find]
# This replaces the find_packages() call with its excludes
exclude = ["contrib", "docs", "tests", "tests.*", "exploration"]

[tool.setuptools.package-data]
# This includes the 'py.typed' file
"futureexpert" = ["py.typed"]

[tool.isort]
line_length = 120
multi_line_output = 1

[tool.pylint.messages_control]
max-line-length = 120

[tool.autopep8]
max_line_length = 120

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_subclassing_any = true
warn_return_any = true
check_untyped_defs = true
strict_equality = true
implicit_reexport = false
no_implicit_optional = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = "futureexpert.*"
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
